PRISM and image updates

--- a/app/views/index-v0.html
+++ b/app/views/index-v0.html
@@ -11,21 +11,13 @@
     <div class="govuk-grid-column-two-thirds govuk-!-padding-bottom-9">
 
 
-      <h1 class="govuk-heading-xl">User journeys and prototype pages</h1>
-
-      <h2 class="govuk-heading-l">User journeys</h2>
-
-      <p><a href="prism/start-page">New PRISM assessment users</a></p>
-
-      <p><a href="psd-revised-flow/inner-home-page/home-02">Existing PRISM assessment users</a></p>
-
-      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
-
-
-      <h2 class="govuk-heading-l">Prototype pages</h2>
+      <h1 class="govuk-heading-l">Product Safety Database (PSD) prototypes</h1>
+      <hr class="govuk-section-break govuk-section-break--xl govuk-section-break--visible" style="margin-bottom: 140px;">
 
 
       <p><a href="psd-revised-flow/inner-home-page/home-02">Home</a></p>
+
+       <p><a href="prism/start-page">Prism journey before PSD login</a></p>
 
       <p><a href="prism/prism-dashboard">Prism dashboard</a></p>
 
