--- a/app/views/layout-prism.html
+++ b/app/views/layout-prism.html
@@ -42,7 +42,7 @@
   {# Set serviceName in config.js. #}
   {{ govukHeader({
     homepageUrl: "/",
-    serviceName: "Product Safety Database",
+    serviceName: "Product safety risk assessment",
     serviceUrl: "/",
     containerClasses: "govuk-width-container"
   }) }}
