--- a/app/views/prism/confirmation-ra.html
+++ b/app/views/prism/confirmation-ra.html
@@ -14,7 +14,7 @@
     <div class="govuk-grid-column-two-thirds">
 
       {{ govukPanel({
-        titleText: "Your product risk assessment complete"
+        titleText: "Your product risk assessment is complete"
       }) }}
 
       <p>You have sucessfully added the risk assessment to <b>All in All + Car Seat, Dragon Kingdom CT4262</b>.</p>
