--- a/app/views/prism/product-assessment-details.html
+++ b/app/views/prism/product-assessment-details.html
@@ -23,7 +23,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
     <h1 class="govuk-heading-l">Add assessment details</h1>
 
 
-     <form class="form" action="/version_4/have-you-searched-PSD" method="post">
+     <form class="form" action="../prism/product-market-placement-v2" method="post">
 
       <div class="govuk-form-group">
         <h3 class="govuk-heading-m">Assessment title</h3>
