--- a/app/views/prism/question-serious-risk.html
+++ b/app/views/prism/question-serious-risk.html
@@ -22,12 +22,12 @@
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
 
  <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-4">
-        Is the product likely to pose a serious risk that would justify exemption from a full risk assessment?
+        Is the product or hazard of a type that generally poses a serious risk?
       </h1>
 
     </legend>
     <div id="changed-name-hint" class="govuk-hint">
-For example, products containing prohibited chemicals, non-compliant category III personal protective equipment and other products subject to OPSS safety alerts are likely to present a serious risk of harm and exempt from a full risk assessment.
+For example, products containing prohibited chemicals, non-compliant category III personal protective equipment and other products covered within the <a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1121889/prism-products-and-hazards-deemed-serious-risk-v01.pdf" target="_blank">OPSS Products and hazards deemed serious risk guide</a> (PDF, 105 KB, 2 pages).
     </div>
     <div class="govuk-radios govuk-radios--inline" data-module="govuk-radios">
       <div class="govuk-radios__item">
@@ -54,10 +54,7 @@ For example, products containing prohibited chemicals, non-compliant category II
     </span>
   </summary>
   <div class="govuk-details__text">
-   <p>In some limited circumstances it is appropriate to treat a non-compliant product as likely to present a serious risk, without the need to undertake a full risk assessment.</p>
-
-    <p>For further information please refer to the OPSS guide on products and hazards deemed serious risk: </p>
-    <p><a href="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/attachment_data/file/1121889/prism-products-and-hazards-deemed-serious-risk-v01.pdf" target="_blank">Products and hazards deemed serious risk</a> (PDF, 105 KB, 2 pages)</p>
+   <p>In some, limited circumstances it is appropriate to treat a non-compliant product as likely to present a serious risk, without the need to undertake a full risk assessment.</p>
   </div>
 </details>
 
