--- a/app/views/prism/question-triage-al.html
+++ b/app/views/prism/question-triage-al.html
@@ -16,7 +16,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form govuk-!-margin-bottom-6" action="/product-triage-5-b" method="post">
+      <form class="form govuk-!-margin-bottom-6" action="/product-triage-5-al" method="post">
 
        <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
