--- a/app/views/prism/task-list-v2.html
+++ b/app/views/prism/task-list-v2.html
@@ -162,7 +162,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
          <li class="app-task-list__item">
           <span class="app-task-list__task-name">
-            <a href="product-hazards">Add a number of hazards</a>
+            <a href="../prism/product-hazards">Add a number of hazards</a>
           </span>
 
          <strong class="govuk-tag govuk-tag--grey app-task-list__tag" id="medical-information-status">Not started</strong>
@@ -244,7 +244,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
         <strong class="govuk-tag app-task-list__tag" id="company-information-status">Completed</strong>
      </li>
 
-   <a href="task-list-v3" class="govuk-button govuk-button--secondary govuk-!-margin-top-4" data-module="govuk-button">
+   <a href="#" class="govuk-button govuk-button--secondary govuk-!-margin-top-4" data-module="govuk-button">
   Add another scenario
 </a>
 
@@ -414,7 +414,7 @@ Product risk question – {{ serviceName }} – GOV.UK Prototype Kit
 
     {% endif %}
 
-     <p style="margin-left: 25px;"><a href="../prism/check-existing-product-assessment">Check your product risk assessment</a></p>
+     <!-- <p style="margin-left: 25px;"><a href="../prism/check-existing-product-assessment">Check your product risk assessment</a></p> -->
 
 
   </ol>
