--- a/app/views/prism/triage-guidance-pre-login.html
+++ b/app/views/prism/triage-guidance-pre-login.html
@@ -39,7 +39,7 @@
   Download PRISM triage EXCEL tool
 </a>
 
-    <p><a href="prism-dashboard">Return to risk assessments dashboard</a></p>
+    <!-- <p><a href="prism-dashboard">Return to risk assessments dashboard</a></p> -->
 
 
 
