--- a/app/views/prism/view-existing-assessment.html
+++ b/app/views/prism/view-existing-assessment.html
@@ -501,16 +501,16 @@
 <br/>
 
         <div class="govuk-button-group">
-  <a href="assign-to-case.html" class="govuk-button" data-module="govuk-button">
+  <a href="#" class="govuk-button" data-module="govuk-button">
     Edit
   </a>
   <!-- <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Create a new product case
   </button> -->
 
-  <button class="govuk-button govuk-button--secondary" data-module="govuk-button">
-    Add to a case
-  </button>
+ <a href="assign-to-case.html" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+     Add to a case
+   </a>
 </div>
 
         <p><a href="#">Download a pdf of the assessment</a></p>
