--- a/app/views/psd-revised-flow/inc_top_nav_2.html
+++ b/app/views/psd-revised-flow/inc_top_nav_2.html
@@ -20,7 +20,7 @@
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Image&nbsp;<span class="govuk-!-font-weight-regular opss-no-wrap">(3<span class="govuk-visually-hidden"> added</span>)</span></dt>
                 <dd class="govuk-summary-list__actions">
-                    <a href="#" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
+                    <a href="add-images-to-case" class="govuk-link govuk-link--no-visited-state opss-no-wrap">
                         Add<span class="govuk-visually-hidden"> an image</span>
                     </a>
                 </dd>
