--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -31,7 +31,7 @@ Product psd-304
 
                 <a class="govuk-link" href="#"> Create a case</a>
 
- <a href="../../prism/question-serious-risk.html" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+ <a href="../../prism/question-serious-risk-al" class="govuk-button govuk-button--secondary" data-module="govuk-button">
     Start a new risk assessment
   </a>
 
