--- a/app/views/prism/evidence-uncertainty.html
+++ b/app/views/prism/evidence-uncertainty.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main.html" %}
+{% extends "layout-psd-menu_home.html" %}
 
 {% set title = "Evaluate product risk and submit assessment" %}
 
