--- a/app/views/prism/product-market-placement-v2.html
+++ b/app/views/prism/product-market-placement-v2.html
@@ -1,7 +1,7 @@
 {% extends "layout-psd-menu_home.html" %}
 
 
-{% set title = "Define the product" %}
+{% set title = "Add assessment and extra product information" %}
 
 
 {% block pageTitle %}
