--- a/app/views/psd-revised-flow/product-page.html
+++ b/app/views/psd-revised-flow/product-page.html
@@ -16,27 +16,17 @@ Product psd-304
 
 
 <div class="govuk-grid-row">
-    <div class="govuk-grid-column-one-half opss-desktop-min-height--s">
-        {% include "psd-revised-flow/inc_product_record_subtitle.html" %}
+    <div class="govuk-grid-column-full govuk-!-margin-bottom-6">
+
+        <span class="govuk-caption-l">psd-670</span>
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-            Product <span
-                class="govuk-!-font-weight-regular govuk-!-font-size-27 govuk-!-margin-left-2"><abbr>psd</abbr>-670</span>
+            All in All+ Car Seat, Dragon Kingdom CT4262
         </h1>
+        <p class="govuk-body-l" style="margin-top:-10px;">by Cosatto</p>
 
-        <p class="govuk-body opss-secondary-text">This is a Product Safety Database (<abbr>PSD</abbr>) product record.
-        </p>
+        <!-- <p class="govuk-body opss-secondary-text">This is a Product Safety Database (<abbr>PSD</abbr>) product record.
+        </p> -->
     </div>
-
-    <div class="govuk-button-group govuk-!-padding-top-6 govuk-!-padding-left-9">
-
-                <a class="govuk-link" href="#"> Create a case</a>
-
- <a href="../../prism/question-serious-risk-al" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-    Start a new risk assessment
-  </a>
-
-    </div>
-
 
 </div>
 
@@ -51,7 +41,7 @@ Product psd-304
 
         <ul class="govuk-list opss-left-nav">
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">
+               <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">
                     Product <span class="govuk-!-font-weight-regular">&nbsp;<abbr>psd</abbr>-670</span>
                 </a>
 
@@ -75,22 +65,23 @@ Product psd-304
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
+        <div class="govuk-button-group">
 
-        <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">The product record</h2>
+                <a class="govuk-link" href="#"> Create a product case</a>
 
-        <div class="govuk-grid-row">
-            <div class="govuk-grid-column-full">
+ <a href="../../prism/question-serious-risk-al" class="govuk-button govuk-button--secondary" data-module="govuk-button">
+    Start a new risk assessment
+  </a>
 
-                <h3 class="govuk-heading-m">All in All+ Car Seat, Dragon Kingdom CT4262</h3>
+    </div>
+    <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
 
-            </div>
-        </div>
 
         <div class="govuk-grid-row">
             <div class="govuk-grid-column-two-thirds">
 
                 <dl
-                    class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--compact">
+                    class="govuk-summary-list govuk-summary-list--no-border govuk-!-margin-bottom-4 opss-summary-list-mixed opss-summary-list-mixed--compact govuk-!-margin-bottom-4">
                     <!-- opss-summary-list-mixed--sm -->
                     <div class="govuk-summary-list__row">
                         <dt class="govuk-summary-list__key">Last updated</dt>
