--- a/app/views/psd-revised-flow/add-images-to-case.html
+++ b/app/views/psd-revised-flow/add-images-to-case.html
@@ -33,7 +33,7 @@ Assigned cases
 
   <div class="govuk-form-group">
 
-      <div class="govuk-hint" id="document-hint"></div>
+      <div class="govuk-hint" id="document-hint"><p>Acceptable file formats: jpeg, gif or png. Maximum file size: 50MB.</p></div>
       <input class="govuk-file-upload" id="imageUpload" name="document[document]" type="file" aria-describedby=" document-hint">
   </div>
 
@@ -52,7 +52,7 @@ Assigned cases
 <div id="fileDisplay" style="display: none;">
 
     <dl class="govuk-summary-list govuk-summary-list--long-key">
-      <div class="govuk-summary-list__row">
+      <!-- <div class="govuk-summary-list__row">
         <dt class="govuk-summary-list__key" style="color:grey;">
           image2.jpg  <img src="/public/images/loader.gif" valign="middle" style="margin-left: 10px;">
       </dt>
@@ -66,7 +66,7 @@ Assigned cases
             Remove<span class="govuk-visually-hidden"> receipt1.jpg</span>
         </a>
     </dd>
-</div>
+</div> -->
 <div class="govuk-summary-list__row">
     <dt class="govuk-summary-list__key">
       <a class="govuk-link" href="#">image1.jpg</a>
@@ -102,7 +102,7 @@ Assigned cases
   <textarea class="govuk-textarea" id="description" name="document[description]" rows="5" aria-describedby="" maxlength="10000"></textarea>
 </div> -->
 
-<button class="govuk-button" data-module="govuk-button">Save</button>
+<button class="govuk-button" data-module="govuk-button">Save and complete image upload</button>
 
 <p><a href="add-images-to-case-error.html">Example of file upload error message</a></p>
 
