Additional changes to multiple products prototype

--- a/app/views/psd-products-area/multiple-products/all-products-upload-success.html
+++ b/app/views/psd-products-area/multiple-products/all-products-upload-success.html
@@ -17,7 +17,7 @@
   </div>
   <div class="govuk-notification-banner__content">
     <h3 class="govuk-notification-banner__heading">
-      The products were uploaded with the case number 2308-0002
+      The products were uploaded with the case number <a href="#">2308-0002</a>
     </h3>
   </div>
 </div>
