--- a/app/views/psd-products-area/multiple-products/corrective-actions-remaining.html
+++ b/app/views/psd-products-area/multiple-products/corrective-actions-remaining.html
@@ -27,8 +27,7 @@
 
   <h3 class="govuk-heading-m">Products selected for corrective action</h3>
 
-  <p>• CK One edt vapo 100ml</p>
-  <p>• Classic edt vapo 90ml</p>
+  <p>•  Miss Dior edt vapo 120ml</p>
 </div>
 
 
@@ -541,7 +540,7 @@
 </div>
 </fieldset>
 </div>
-<a href="corrective-actions-loop" class="govuk-button" data-module="govuk-button" value="Continue" id="submit">Continue</a>
+<a href="check-corrective-actions" class="govuk-button" data-module="govuk-button" value="Continue" id="submit">Continue</a>
     </div>
 
   </div>
