--- a/app/views/psd-products-area/multiple-products/create-case.html
+++ b/app/views/psd-products-area/multiple-products/create-case.html
@@ -33,9 +33,9 @@
     <form class="form" action="../prism/product-market-placement-v2" method="post">
 
       <div class="govuk-form-group">
-        <h3 class="govuk-heading-m">Case title</h3>
+        <h3 class="govuk-heading-m">Case name</h3>
         <p id="more-detail-hint" class="govuk-hint">
-        Provide a short descriptive tile for the case</p>
+        Give the case a short descriptive title..</p>
         <input class="govuk-input" id="assessor-name" name="assessor-name" type="text" value="{{ data['assessor-name'] }}">
       </div>
       <h3 class="govuk-heading-m">Do you want to add your own reference number to the case?</h3>
