--- a/app/views/psd-products-area/multiple-products/excel-upload.html
+++ b/app/views/psd-products-area/multiple-products/excel-upload.html
@@ -18,7 +18,7 @@
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
 
-      <form class="form govuk-!-margin-bottom-6" action="review-product-upload" method="post">
+      <form class="form govuk-!-margin-bottom-6" action="duplicate-products" method="post">
 
        <fieldset class="govuk-fieldset" aria-describedby="changed-name-hint">
     <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
@@ -45,7 +45,7 @@
     </div>
   </div>
 
-       <button type="submit" class="govuk-button" data-module="govuk-button" value="Continue" id="submit">Upload and continue</button>
+       <button type="submit" class="govuk-button" data-module="govuk-button" value="Continue" id="submit">Continue</button>
 
 
 
