--- a/app/views/psd-products-area/multiple-products/no-upload-unsafe.html
+++ b/app/views/psd-products-area/multiple-products/no-upload-unsafe.html
@@ -29,7 +29,7 @@
       </h1>
     </legend>
 
-    <p>Each unsafe product requires a risk triage or assessment.</p>
+    <p>Each unsafe product requires a <a href="../../prism/triage-guidance-pre-login">risk triage</a> or <a href="../../prism/prism-dashboard">risk assessment</a>.</p>
 
 <p>You can only upload multiple non-compliant products</p>
 
